test/good/classes/init01.px

class A def
    Int n

A*[Float] x
print x.b
