test/bad/classes/type01.px

A = 1

class A def
    Int x
